<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".screens.login.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_63sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:background="@drawable/login_logo"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="आपका स्वागत हैं"
        android:textSize="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/black"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textSize="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
       ></TextView>

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/phone_no"
        android:textColorHint="@color/black"
        android:inputType="numberDecimal"
        android:padding="@dimen/_7sdp"

        android:background="@drawable/rectangle_rounded_login"></EditText>
    <RelativeLayout
        android:id="@+id/rl_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/rectangle_rounded_green">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textSize="@dimen/_18sdp"
            android:layout_marginLeft="@dimen/_65sdp"
            android:text="@string/signin"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableRight="@drawable/right_arrow">
        </TextView>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:textSize="@dimen/_20sdp"
        android:text="@string/donothaveaccount"></TextView>
    <TextView
        android:id="@+id/tv_registernow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:text="@string/register_now">

    </TextView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>