<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.profile.ProfileActivity">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@drawable/gradient_green_header">

        <RelativeLayout
            android:id="@+id/img_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent">
            <ImageView

                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/back"></ImageView>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/white"
            android:text="@string/home"></TextView>
        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edit"></ImageView>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/_25sdp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="#FF000000"/>
    <TextView
        android:id="@+id/tvusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Amtita Singh"></TextView>
    <TextView
        android:id="@+id/tvphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_17sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/call"
        android:text="+98876545212"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/sep"></TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:hint="@string/update_email"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/rectangle_rounded_grey_broder_white"></EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:layout_margin="@dimen/_15sdp"
        android:hint="@string/update_address"
        android:padding="@dimen/_10sdp"
        android:gravity="top"
        android:background="@drawable/rectangle_rounded_grey_broder_white"></EditText>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_1sdp"
    android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
    android:background="@drawable/sep"></TextView>
    <Button
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/setpassword"
        android:background="@drawable/rectangle_rounded_green"></Button>
        </LinearLayout>
    </ScrollView>
        </LinearLayout>