<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".screens.home.HomeActivity">
    <include
        android:id="@+id/content_main"
        layout="@layout/content_main"></include>
    <RelativeLayout
        android:layout_width="@dimen/_210sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
       >
        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/gradient_green_button">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_20sdp"
                android:src="@drawable/profile"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/profile_image"
                android:textSize="@dimen/_15sdp"
               android:layout_marginTop="@dimen/_30sdp"
                android:text="Amit Shingh"></TextView>
            <TextView
                android:id="@+id/tv_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/profile_image"
                android:layout_below="@+id/tv_name"
                android:textSize="@dimen/_15sdp"
                android:text="896652131"></TextView>

        </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_below="@+id/rl_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_credit_planningt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="लोन के लिए बताये"></TextView>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_category"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:id="@+id/ll_aboutus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/about_us"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/feedback"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_termcondition"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/term_condition"></TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:text="@string/logout"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>